--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -60,5 +60,6 @@
     "ANGLAIS": "ANGLAIS",
     "FRANCAIS": "FRANCAIS",
     "ENATTENTE": "En attente",
-    "REJECT": "Rejeté"
+    "REJECT": "Rejeté",
+    "USERNAME": "Nom utilisateur"
 }
