--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,7 +5,7 @@
     "LOGIN": "Connexion",
     "SIGNUP": "Inscription",
 
-    "TAB1_TITLE": "Items",
+    "TAB1_TITLE": "Bon",
     "TAB2_TITLE": "Recherche",
     "TAB3_TITLE": "Paramètres",
 
@@ -61,5 +61,8 @@
     "FRANCAIS": "FRANCAIS",
     "ENATTENTE": "En attente",
     "REJECT": "Rejeté",
-    "USERNAME": "Nom utilisateur"
+    "USERNAME": "Nom utilisateur",
+    "Pull to refresh": "Tirer pour rafraîchir",
+    "Refreshing": "En cours",
+    "SEARCH_PLACEHOLDER": "Search bon"
 }
