--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,6 +5,7 @@
     "LOGIN": "Connexion",
     "SIGNUP": "Inscription",
 
+    "TAB0_TITLE": "Demandes",
     "TAB1_TITLE": "Bon",
     "TAB2_TITLE": "Clients",
     "TAB3_TITLE": "Paramètres",
