--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -53,6 +53,7 @@
     "SEARCH_TITLE": "Recherche",
     "BONS_TITLE": "Liste des bons",
     "FACTURES_TITLE": "Liste des factures",
+    "DEMANDES_TITLE": "Liste des demandes",
     "ACCEPT_BUTTON": "Accepter",
     "REJECT_BUTTON": "Rejeter",
     "ANNULER_BUTTON": "Annuler",
